[package]
name = "rust-cli"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/rust-cli"
documentation = "https://docs.rs/rust-cli"
description = "rust(1) CLI prototype"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
structopt = "0.3.25"

[dev-dependencies]
